syntax = "proto3";

package proto;

option go_package = "KVADO-library/gen/proto";

service Library {
  rpc BooksByAuthorID(BooksByAuthorRequest) returns (BooksByAuthorResponse) {}
  rpc AuthorsByBookID(AuthorsByBookRequest) returns (AuthorsByBookResponse) {}
}

message Book {
  string id = 1;
  string title = 2;
  repeated string author_ids = 3;
}

message Author {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message BooksByAuthorRequest {
  string author_id = 1;
}

message BooksByAuthorResponse {
  repeated Book books = 1;
}

message AuthorsByBookRequest {
  string book_id = 1;
}

message AuthorsByBookResponse {
  repeated Author authors = 1;
}
